<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro">

    <ImageView
        android:id="@+id/voltar_cad"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/voltar_cad"
        app:layout_constraintBottom_toTopOf="@+id/CadastroCpf"
        app:layout_constraintEnd_toStartOf="@+id/cadastroTitulo"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <EditText
        android:id="@+id/CadastroCpf"
        android:layout_width="300dp"
        android:layout_height="60sp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/insira_seu_cpf"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <EditText
        android:id="@+id/idEmailinicial"
        android:layout_width="300dp"
        android:layout_height="60sp"
        android:padding="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/insira_seu_email"
        android:background="@drawable/custom_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CadastroCpf"
        app:layout_constraintVertical_bias="0.084"
        android:autofillHints="" />

    <EditText
        android:id="@+id/CadastroSenha"
        android:layout_width="300dp"
        android:layout_height="60sp"
        android:padding="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/digite_sua_senha"
        android:background="@drawable/custom_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEmailinicial"
        app:layout_constraintVertical_bias="0.103"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="300dp"
        android:layout_height="60sp"
        android:padding="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/digite_a_senha_novamente"
        android:background="@drawable/custom_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CadastroSenha"
        app:layout_constraintVertical_bias="0.097"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="285dp"
        android:layout_height="51dp"
        android:background = "@color/logo2"
        android:layout_marginBottom="92dp"
        android:textColor="#FFFFFF"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cadastroTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cadastro"
        android:textColor="@color/logo"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/concordo_com_os_termos_acordados_nesse_aplicativo_que_est_o_de_simples_acesso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        app:layout_constraintVertical_bias="0.152" />
</androidx.constraintlayout.widget.ConstraintLayout>